objects/copado__System_Property__c.object
<CustomObject>
    <fields>
        <fullName>copado__API_Name__c</fullName>
        <description>This is the unique name of the system property which is used as a reference in dynamic expressions.</description>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the environment which is linked to the system property.</description>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>System Properties</relationshipLabel>
        <relationshipName>System_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Is_Global__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox if you want to share the System Property among multiple pipelines and environments.</inlineHelpText>
        <label>Is Global?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Is_Sensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checbox to hide the sensitive information.</description>
        <label>Hide Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__ParentId__c</fullName>
        <description>This value is automatically populated when selecting a Pipeline, Environment or User. If none is selected, the record Id this property is linked to must be entered manually.</description>
        <inlineHelpText>This value is automatically populated when selecting a Pipeline, Environment or User. If none is selected, the record Id this property is linked to must be entered manually.</inlineHelpText>
        <label>Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the pipeline linked to the system property.</description>
        <label>Pipeline</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipLabel>System Properties</relationshipLabel>
        <relationshipName>System_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__UID__c</fullName>
        <description>Read-only field used internally for system property replacement.</description>
        <formula>IF( copado__Is_Global__c, copado__API_Name__c, copado__ParentId__c + &quot;-&quot; +  copado__API_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the user linked to the system property.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Value__c</fullName>
        <description>This is the value of the system property.</description>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>